--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -4,3 +4,11 @@
   grid-gap: 16px;
   padding-bottom: 24px;
 }
+.errorMesage {
+  color: tomato;
+  font-size: 34px;
+  text-align: center;
+}
+body{
+  scroll-behavior: smooth;
+}
