--- a/src/components/ScrollTopArrow/ScrollTopArrow.module.css
+++ b/src/components/ScrollTopArrow/ScrollTopArrow.module.css
@@ -10,9 +10,10 @@
   cursor: pointer;
   opacity: 0.8;
   transition: 250ms linear;
+  box-shadow: 0 1px 1px rgba(102, 62, 62, 0.12), 0 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
 }
-.arrow:hover{
+.arrow:hover {
   opacity: 1;
   transform: scale(1.05);
 }
-
